--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext {
+        compose_ui_version = '1.3.3'
+    }
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.android.tools.build:gradle:7.4.0'
+//        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,13 +30,13 @@ allprojects {
 }
 
 ext {
-    compileSdkVersion = 28
+    compileSdkVersion = 33
     buildToolsVersion = '29.0.2'
-    minSdkVersion = 21
-    targetSdkVersion = 28
+    minSdkVersion = 26
+    targetSdkVersion = 31
 
-    ktxVersion = '1.1.0'
-    appcompatVersion = '1.1.0'
+    ktxVersion = '1.8.0'
+    appcompatVersion = '1.6.0'
     espressoVersion = '2.2.2'
     junitVersion = '4.12'
 }
@@ -41,6 +45,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-import com.richbuild.KoshryTask
-
-task koshry(type: KoshryTask) {}
