--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
-include ':app', ':appkt', ':richpath', ':animator', 'buildSrc'
+include ':richpath', ':animator'
+include ':composesample'
+include ':appkt'
