--- a/richpath/build.gradle
+++ b/richpath/build.gradle
@@ -1,8 +1,8 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'maven-publish'
-}
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'maven-publish'
+
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
@@ -10,6 +10,9 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         consumerProguardFiles 'consumer-proguard-rules.pro'
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -30,21 +33,33 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espressoVersion", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.1'
+    testImplementation "junit:junit:$junitVersion"
     implementation("io.coil-kt:coil-compose:2.2.2")
+
 }
 
 afterEvaluate {
     publishing {
         publications {
-            release(MavenPublication) {
+            release(MavenPublication){
                 from components.release
+
+                groupId = 'com.richpath'
+                artifactId = "richPathCompose"
+                version = '1.0.8'
             }
         }
     }
 }
+
+
