--- a/animator/build.gradle
+++ b/animator/build.gradle
@@ -42,9 +42,9 @@ afterEvaluate {
             release(MavenPublication){
                 from components.release
 
-//                groupId = 'com.richpathanimator'
-//                artifactId = "richPathAnimator"
-//                version = '1.0.8'
+                groupId = 'com.richpathanimator'
+                artifactId = "richPathAnimator"
+                version = '1.0.9'
             }
         }
     }
