--- a/richpath/build.gradle
+++ b/richpath/build.gradle
@@ -27,8 +27,8 @@ android {
         kotlinCompilerExtensionVersion '1.4.0'
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_1
-        targetCompatibility JavaVersion.VERSION_1_1
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
